# aoc

2025/rust/: Cargo.toml  justfile
2025/rust/aoc-client/: Cargo.toml
2025/rust/aoc-client/src/: lib.rs
2025/rust/bench-all/: Cargo.toml  build.rs
2025/rust/bench-all/benches/: bench.rs
2025/rust/bench-all/src/: lib.rs
2025/rust/day-1/: Cargo.toml
2025/rust/day-1/benches/: part_a.rs  part_b.rs
2025/rust/day-1/src/: lib.rs  main.rs
2025/rust/day-10/: Cargo.toml
2025/rust/day-10/benches/: part_a.rs  part_b.rs
2025/rust/day-10/src/: lib.rs  main.rs
2025/rust/day-2/: Cargo.toml
2025/rust/day-2/benches/: part_a.rs  part_b.rs
2025/rust/day-2/src/: lib.rs  main.rs
2025/rust/day-3/: Cargo.toml
2025/rust/day-3/benches/: part_a.rs  part_b.rs
2025/rust/day-3/src/: lib.rs  main.rs
2025/rust/day-4/: Cargo.toml
2025/rust/day-4/benches/: part_a.rs  part_b.rs
2025/rust/day-4/src/: lib.rs  main.rs
2025/rust/day-5/: Cargo.toml
2025/rust/day-5/benches/: part_a.rs  part_b.rs
2025/rust/day-5/src/: lib.rs  main.rs
2025/rust/day-6/: Cargo.toml
2025/rust/day-6/benches/: part_a.rs  part_b.rs
2025/rust/day-6/src/: lib.rs  main.rs
2025/rust/day-7/: Cargo.toml
2025/rust/day-7/benches/: part_a.rs  part_b.rs
2025/rust/day-7/src/: lib.rs  main.rs
2025/rust/day-8/: Cargo.toml
2025/rust/day-8/benches/: part_a.rs  part_b.rs
2025/rust/day-8/src/: lib.rs  main.rs
2025/rust/day-9/: Cargo.toml
2025/rust/day-9/benches/: part_a.rs  part_b.rs
2025/rust/day-9/src/: lib.rs  main.rs
2025/rust/grid/: Cargo.toml
2025/rust/grid/src/: dir.rs  ext.rs  iter.rs  lib.rs
2025/rust/grid/src/grid/: builder.rs  mod.rs
2025/rust/math/: Cargo.toml
2025/rust/math/src/: lib.rs
2025/rust/parse/: Cargo.toml
2025/rust/parse/src/: range.rs  vec.rs
2025/rust/range/: Cargo.toml
2025/rust/range/src/: lib.rs
day_template/rust/: Cargo.toml
day_template/rust/src/: main.rs
