[package]
name = "bench-all"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.93"
seq-macro = "0.3.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.aoc-client]
path = "/home/spc/projects/aoc/2024/rust/aoc-client"

[dependencies.clap]
version = "4.5.21"
features = ["derive"]

[dependencies.day-1]
path = "../day-1"

[dependencies.day-10]
path = "../day-10"

[dependencies.day-11]
path = "../day-11"

[dependencies.day-12]
path = "../day-12"

[dependencies.day-13]
path = "../day-13"

[dependencies.day-14]
path = "../day-14"

[dependencies.day-15]
path = "../day-15"

[dependencies.day-16]
path = "../day-16"

[dependencies.day-17]
path = "../day-17"

[dependencies.day-18]
path = "../day-18"

[dependencies.day-2]
path = "../day-2"

[dependencies.day-20]
path = "../day-20"

[dependencies.day-22]
path = "../day-22"

[dependencies.day-23]
path = "../day-23"

[dependencies.day-25]
path = "../day-25"

[dependencies.day-3]
path = "../day-3"

[dependencies.day-4]
path = "../day-4"

[dependencies.day-5]
path = "../day-5"

[dependencies.day-6]
path = "../day-6"

[dependencies.day-7]
path = "../day-7"

[dependencies.day-8]
path = "../day-8"

[dependencies.day-9]
path = "../day-9"

[dependencies.tokio]
version = "1.41.1"
features = ["rt-multi-thread", "macros"]

[dev-dependencies.criterion]
version = "0.5"
features = ["cargo_bench_support", "rayon"]
default-features = false

[build-dependencies]
cargo_toml = "0.21.0"
toml = "0.8.19"

[lib]
path = "src/lib.rs"
name = "bench_all"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false
required-features = []
