[package]
name = "day-8"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
aoc-client.workspace = true
clap.workspace = true
glam.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
tracing-test.workspace = true

[lints]
workspace = true

[[bench]]
name = "part_a"
harness = false

[[bench]]
name = "part_b"
harness = false
