[package]
name = "grid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bon = "3.3.1"
derive_more = { version = "1.0.0", features = [
  "debug",
  "from",
  "error",
  "display",
] }
glam.workspace = true
pathfinding = "4.12.0"
test-case.workspace = true
tracing.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
